--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "gitbbak": "bin/gitbundle.bin.js"
+    "gitbbak": "bin/gitbbak.bin.js"
   },
   "author": "",
   "license": "ISC",
